fix(teamsstats): swagger
